# starify

./: .devcontainer.json  .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  node-packages.nix  package-lock.json  package.json  result  rust-toolchain.toml  tailwind.config.js
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: vhqrrp07dkp6wdqym5hzh3m91nv0jfjd-source
nix/: node-packages.nix
src/: app.rs  auth.rs  client.rs  error_template.rs  errors.rs  input.css  lib.rs  main.rs  server.rs
src/app/: dashboard.rs  login.rs  mod.rs
