[package]
name = "musiscope"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
cfg-if = "1.0"
http = "0.2.9"
time = "0.3.30"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

leptos = "0.5.2"
leptos_meta = "0.5"
leptos_router = "0.5"

leptos_axum = { version = "0.5", optional = true }
axum = { version = "0.6", optional = true }
axum-extra = { version = "0.8.0", features = ["cookie"], optional = true }
tokio = { version = "1.34", optional = true, features = ["macros", "rt-multi-thread"] }
jsonwebtoken = { version = "9.1.0", optional = true }
rspotify = { version = "0.12.0", optional = true }
rust-embed = { version = "8.0", features = ["interpolate-folder-path"], optional = true }
mime_guess = { version = "2.0.4", optional = true }

wasm-bindgen = { version = "=0.2.88", optional = true }
tracing-subscriber-wasm = { version = "0.1.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
    "dep:tracing-subscriber-wasm",
    "dep:console_error_panic_hook"
]
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:rust-embed",
    "dep:mime_guess",
    "dep:jsonwebtoken",
    "dep:rspotify",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
default = ["ssr"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
tailwind-input-file = "src/input.css"

bin-features = ["ssr"]

lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

