[package]
name = "musiscope"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# shared
tracing = "0.1"
tracing-subscriber = "0.3"
cfg-if = "1.0"
http = "0.2.9"
time = "0.3.30"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rspotify = { version = "0.12.0", default-features = false }

# leptos (shared)
leptos = { version = "0.5.2", features = ["rustls"] }
leptos_meta = "0.5"
leptos_router = "0.5"

# backend
argh = { version = "0.1.12", optional = true }
async-trait = { version = "0.1.74", optional = true }
color-eyre = { version = "0.6.2", optional = true }
leptos_axum = { version = "0.5", optional = true }
axum = { version = "0.6", optional = true }
axum-extra = { version = "0.8.0", features = ["cookie"], optional = true }
axum-login = { version = "0.10.0", optional = true }
tower = { version = "0.4.13", optional = true }
tokio = { version = "1.34", optional = true, features = [
    "macros",
    "rt-multi-thread",
] }
dgraph-tonic = { version = "0.11.0", features = [
    "tokio-rustls",
], optional = true }
rust-embed = { version = "8.0", features = [
    "interpolate-folder-path",
], optional = true }
mime_guess = { version = "2.0.4", optional = true }
oauth2 = { version = "4.4.2", optional = true }

# frontend only
wasm-bindgen = { version = "=0.2.88", optional = true }
tracing-subscriber-wasm = { version = "0.1.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "rspotify/client-ureq",
    "dep:wasm-bindgen",
    "dep:tracing-subscriber-wasm",
    "dep:console_error_panic_hook",
]
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:axum-login",
    "dep:argh",
    "dep:color-eyre",
    "dep:tokio",
    "dep:dgraph-tonic",
    "rspotify/client-reqwest",
    "rspotify/reqwest-rustls-tls",
    "dep:leptos_axum",
    "dep:rust-embed",
    "dep:mime_guess",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:async-trait",
    "dep:tower",
    "dep:oauth2"
]
default = ["ssr"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.server-release]
inherits = "release"
opt-level = 3
strip = true

[package.metadata.leptos]
tailwind-input-file = "src/input.css"

bin-features = ["ssr"]
bin-profile-release = "server-release"

lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
